# eve_backend

./: .env  Cargo.toml  README.md
src/: main.rs
src/models/: errors.rs  mod.rs  ship.rs
src/routes/: mod.rs
src/routes/database/: add_column.rs  mod.rs
src/routes/ships/: add_ship.rs  drop_ships_table.rs  get_ship.rs  get_ships.rs  mod.rs  update_ship.rs
